--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       H<span class="inter">a</span>pp<span class="inter">y Bir</span>th<span
         class="inter"
         >da</span
-      >y!
+      >y Stephen!
     </h1>
     <div class="content">
       <div class="webcam">
@@ -21,10 +21,9 @@
       <div class="cake-area">
         <img src="assets/cake_bg.png" alt="" class="cake-bg" />
         <img src="assets/cake_unlit.gif" alt="" class="cake" />
-        <img src="assets/match.gif" alt="" class="match" />
       </div>
       <p class="instructions">
-        Use your pointy fingers to light the cake, then blow out the candles! Low calorie cake option.
+        Make a wish. Blow out the candles! Low calorie cake option :]
       </p>
     </div>
 
