--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <h1 class="page-title">
-      H<span class="inter">a</span>pp<span class="inter">y Bir</span>th<span
-        class="inter"
-        >da</span
-      >y Stephen!
+     H<span class="inter">a</span>pp<span class="inter">y Bir</span>th<span class="inter">da</span>y Stephen!
     </h1>
     <div class="content">
       <div class="webcam">
@@ -23,7 +20,7 @@
         <img src="assets/cake_unlit.gif" alt="" class="cake" />
       </div>
       <p class="instructions">
-        Make a wish. Blow out the candles! Low calorie cake option :]
+        Make a wish and then blow out the candles! It's a low calorie cake option
       </p>
     </div>
 
