--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="assets/cake_unlit.gif" alt="" class="cake" />
       </div>
       <p class="instructions">
-        Make a wish and then blow out the candles! It's a low calorie cake option
+        Make a wish and then blow out the candles! It's a low calorie cake option. Happy 36th.
       </p>
     </div>
 
